<resources>
    <string name="app_name">AIOK</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="signup_here">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_here">Already have an account? Log in</string>
    <string name="sign_up">Sign up</string>
</resources>